added accounts and transactions

--- a/SimpleБanking/SimpleBanking.csproj
+++ b/SimpleБanking/SimpleBanking.csproj
@@ -85,6 +85,10 @@
     <Compile Include="Migrations\202005102154089_customers.designer.cs">
       <DependentUpon>202005102154089_customers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005102158425_accountsAndTransactions.cs" />
+    <Compile Include="Migrations\202005102158425_accountsAndTransactions.designer.cs">
+      <DependentUpon>202005102158425_accountsAndTransactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +112,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202005102154089_customers.resx">
       <DependentUpon>202005102154089_customers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005102158425_accountsAndTransactions.resx">
+      <DependentUpon>202005102158425_accountsAndTransactions.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
