--- a/SimpleБanking/SimpleBanking.csproj
+++ b/SimpleБanking/SimpleBanking.csproj
@@ -93,6 +93,10 @@
     <Compile Include="Migrations\202005102203510_customerToAccount.designer.cs">
       <DependentUpon>202005102203510_customerToAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005102226200_relationsupdate.cs" />
+    <Compile Include="Migrations\202005102226200_relationsupdate.designer.cs">
+      <DependentUpon>202005102226200_relationsupdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -122,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005102203510_customerToAccount.resx">
       <DependentUpon>202005102203510_customerToAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005102226200_relationsupdate.resx">
+      <DependentUpon>202005102226200_relationsupdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
