--- a/SimpleБanking/SimpleBanking.csproj
+++ b/SimpleБanking/SimpleBanking.csproj
@@ -109,6 +109,10 @@
     <Compile Include="Migrations\202005102347089_relationsupdate1.designer.cs">
       <DependentUpon>202005102347089_relationsupdate1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005102349219_relationsupdate2.cs" />
+    <Compile Include="Migrations\202005102349219_relationsupdate2.designer.cs">
+      <DependentUpon>202005102349219_relationsupdate2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005102347089_relationsupdate1.resx">
       <DependentUpon>202005102347089_relationsupdate1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005102349219_relationsupdate2.resx">
+      <DependentUpon>202005102349219_relationsupdate2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
