register some users

--- a/SimpleБanking/SimpleBanking.csproj
+++ b/SimpleБanking/SimpleBanking.csproj
@@ -113,6 +113,14 @@
     <Compile Include="Migrations\202005102349219_relationsupdate2.designer.cs">
       <DependentUpon>202005102349219_relationsupdate2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005112229538_drop1.cs" />
+    <Compile Include="Migrations\202005112229538_drop1.designer.cs">
+      <DependentUpon>202005112229538_drop1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202005112230335_build.cs" />
+    <Compile Include="Migrations\202005112230335_build.designer.cs">
+      <DependentUpon>202005112230335_build.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -158,6 +166,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202005102349219_relationsupdate2.resx">
       <DependentUpon>202005102349219_relationsupdate2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005112229538_drop1.resx">
+      <DependentUpon>202005112229538_drop1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005112230335_build.resx">
+      <DependentUpon>202005112230335_build.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
