use normal connection string

--- a/SimpleБanking/App.config
+++ b/SimpleБanking/App.config
@@ -7,7 +7,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="BankDb" connectionString="Server=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\BankDb.mdf;Initial Catalog=BankDb;Integrated Security=True" providerName="System.Data.SqlClient"></add>
+    <add name="BankDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BankDb;Integrated Security=True" providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
