using wcf sessions

--- a/RemoteService/App.config
+++ b/RemoteService/App.config
@@ -18,12 +18,11 @@
   <system.serviceModel>
     <services>
       <service name="RemoteService.Service">
-        <endpoint address="" binding="basicHttpBinding" contract="RemoteService.IService">
-          <identity>
-            <dns value="localhost"/>
-          </identity>
-        </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <endpoint
+        address=""
+        binding="wsHttpBinding"
+        contract="RemoteService.IService"
+       />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8733/Design_Time_Addresses/RemoteService/Service1/"/>
