--- a/RemoteService/App.config
+++ b/RemoteService/App.config
@@ -6,7 +6,9 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-
+  <connectionStrings>
+    <add name="BankDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BankDb;Integrated Security=True" providerName="System.Data.SqlClient"></add>
+  </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
