reduce code complexity

--- a/RemoteClient/App.config
+++ b/RemoteClient/App.config
@@ -12,9 +12,18 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IService" />
       </basicHttpBinding>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_IService" />
+      </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8733/Design_Time_Addresses/RemoteService/Service1/" binding="wsHttpBinding" contract="ServiceReference1.IService"/>
+      <endpoint address="http://localhost:8733/Design_Time_Addresses/RemoteService/Service1/"
+        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IService"
+        contract="ServiceReference1.IService" name="WSHttpBinding_IService">
+        <identity>
+          <userPrincipalName value="DESKTOP-5R9C74F\null" />
+        </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
   <entityFramework>
