--- a/RemoteService/App.config
+++ b/RemoteService/App.config
@@ -7,7 +7,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="BankDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BankDb;Integrated Security=True" providerName="System.Data.SqlClient"></add>
+    <add name="BankDb" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=BankDb;Integrated Security=True;MultipleActiveResultSets=true;" providerName="System.Data.SqlClient"></add>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
